# fb_tool_be

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test.py
.docker/: docker-compose.yml
.docker/traefik/: dynamic.yml  static.yml
analysis/: api.ipynb  test.py  test_1.py
migrate/: env.py
migrate/versions/: 0169bbecf122_update_table.py  049905d67c83_update_table.py  082c41a6d029_update_link_group.py  0e325653af2a_update_code.py  18676765e1f9_update_code.py  22af437c0393_init_table.py  241316ea6f9d_update_table.py  250ddf2fee0c_init_table.py  277a6b9f30ce_update.py  2781d51b5781_upgrade_table.py  283ead9a1de1_update_code.py  29c2fe944b20_update.py  2ba88738a489_update_table.py  2e4a37ce2b21_feat_stable.py  384e1897e989_upgrade_table.py  484acb0afc2f_update_table.py  48f7c8567103_update_code.py  4a218069e0a3_init_table.py  4edf6519a4f7_update_link_group.py  5175c8b29fba_update_code.py  561205f4b531_upgrade_table.py  5740cee66278_init_table.py  615532ff221b_init_table.py  62648b005839_update_table.py  6a84a782ee6b_update_table.py  6d46e2f62729_update_table.py  6edb0fa707cf_update_column.py  702e79c0b485_upgrade_table.py  708dcb0b4d18_update_code.py  747dc86f5cbd_update.py  7da2ef75a053_update.py  7e073a9f0c38_.py  7fc2d6cf330c_init_table.py  830990581859_update.py  83141ec8d68a_update_column.py  8c6bea8110a7_update_column.py  8e56b32de750_update_table.py  8f7b870c6dd4_update_code.py  910e2b274391_update_table.py  98b4c3b22899_init_table.py  (+14 more)
postgres_data_fb/: postmaster.pid
postgres_data_fb/base/1/: 1259  2619  2696
postgres_data_fb/base/16384/: 1247  1249  1259  1259_fsm  16389  16392  16394  16399  16417  16418  16447  16465  16470  24577  24582  2579  2606  2608  2610  2619  2620  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  pg_internal.init
postgres_data_fb/base/5/: 2619
postgres_data_fb/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
scripts/: data_cmd.json  prompt.py  test.ipynb  test.py
setup/: setup.py  test.py
src/: app.py
src/application/dto/: response_dto.py
src/application/usecase/: accounts_usecase.py  comment_usecase.py  group_usecase.py  history_scrape_usecase.py  message_usecase.py  post_usecase.py  (+3 more)
src/config/: __init__.py
src/db/: comments.py  groups.py  messages.py  posts.py  users.py
src/middleware/: __init__.py  di.py
src/router/: base.py  comments.py  groups.py  messages.py  posts.py  user.py
tests/: test.py
(+90 files in other folders)
