[project]
name = "fb-too-be"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "LNOI", email = "thanhloidev@gmail.com" }
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.31.0",
    "sqlmodel>=0.0.22",
    "pydantic>=2.9.2",
    "alembic>=1.13.3",
    "pydantic-settings>=2.5.2",
    "psycopg2-binary>=2.9.9",
    "requests>=2.32.3",
    "redis>=5.1.1",
    "jinja2>=3.1.4",
    "black>=24.10.0",
    "mypy>=1.11.2",
    "isort>=5.13.2",
    "pytest>=8.3.3",
    "injector>=0.22.0",
    "pyjwt>=2.9.0",
    "boto3>=1.35.40",
    "boto3-stubs[essential]>=1.35.40",
    "websockets>=14.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip = [".venv", ".git", "build", "dist"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fb_too_be"]

[tool.rye.scripts]
start = "uvicorn src.infrastructures.ui.main:app --host 0.0.0.0 --port 8000 --reload"
